--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -100,7 +100,17 @@ javac.classpath=\
     ${file.reference.slf4j-api-1.6.2.jar-2}:\
     ${file.reference.slf4j-log4j12-1.6.2.jar-2}:\
     ${file.reference.webcam-capture-0.3.12__1_.jar-1}:\
-<<<<<<< HEAD
+    <<<<<<< HEAD:\
+    ${file.reference.mssql-jdbc-11.2.0.jre17.jar-2}:\
+    ${file.reference.AbsoluteLayout-RELEASE160.jar-1}:\
+    ${file.reference.bridj-0.6.2-windows-only.jar-1}:\
+    ${file.reference.core-3.3.0.jar-1}:\
+    ${file.reference.javase-3.3.0.jar}:\
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.log4j-1.2.17.jar}:\
+    ${file.reference.slf4j-api-1.6.2.jar-1}:\
+    ${file.reference.slf4j-log4j12-1.6.2.jar-1}:\
+    ${file.reference.webcam-capture-0.3.12__1_.jar}
 =======
     <<<<<<< HEAD:\
     ${file.reference.mssql-jdbc-11.2.0.jre17.jar}
