--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -110,7 +110,8 @@ javac.classpath=\
     ${file.reference.log4j-1.2.17.jar}:\
     ${file.reference.slf4j-api-1.6.2.jar-1}:\
     ${file.reference.slf4j-log4j12-1.6.2.jar-1}:\
-    ${file.reference.webcam-capture-0.3.12__1_.jar}
+    ${file.reference.webcam-capture-0.3.12__1_.jar}:\
+    ${file.reference.mssql-jdbc-11.2.0.jre17.jar-1}
 =======
     <<<<<<< HEAD:\
     ${file.reference.mssql-jdbc-11.2.0.jre17.jar}
