--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -145,7 +145,7 @@ javac.classpath=\
     ${file.reference.webcam-capture-0.3.12.jar}:\
     ${file.reference.zxing-core-1.7.jar}:\
     ${file.reference.zxing-j2se-1.7.jar}:\
-<<<<<<< HEAD
+    ${file.reference.mssql-jdbc-11.2.0.jre17.jar}
     ${file.reference.mssql-jdbc-11.2.0.jre17.jar}
 =======
     ${file.reference.mssql-jdbc-11.2.0.jre17.jar-3}
