--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -207,7 +207,8 @@ javac.classpath=\
     ${file.reference.webcam-capture-0.3.12.jar-1}:\
     ${file.reference.xmlbeans-3.0.2.jar-1}:\
     ${file.reference.zxing-core-1.7.jar-1}:\
-    ${file.reference.zxing-j2se-1.7.jar-1}
+    ${file.reference.zxing-j2se-1.7.jar-1}:\
+    ${file.reference.mssql-jdbc-11.2.0.jre17.jar-1}
 =======
     ${file.reference.bridj-0.6.2-windows-only.jar}:\
     ${file.reference.core-3.3.0.jar}:\
