Thêm đơn hủy hóa đơn

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -211,7 +211,8 @@ javac.classpath=\
     ${file.reference.xmlbeans-3.0.2.jar-1}:\
     ${file.reference.zxing-core-1.7.jar-1}:\
     ${file.reference.zxing-j2se-1.7.jar-1}:\
-    ${file.reference.mssql-jdbc-11.2.0.jre17.jar}
+    ${file.reference.mssql-jdbc-11.2.0.jre17.jar}:\
+    ${file.reference.mssql-jdbc-11.2.0.jre17.jar-1}
     ${file.reference.mssql-jdbc-11.2.0.jre17.jar-2}
 =======
     ${file.reference.mssql-jdbc-11.2.0.jre17.jar-1}:\
