--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -217,7 +217,10 @@ javac.classpath=\
     ${file.reference.xmlbeans-3.0.2.jar-1}:\
     ${file.reference.zxing-core-1.7.jar-1}:\
     ${file.reference.zxing-j2se-1.7.jar-1}:\
-<<<<<<< HEAD
+    <<<<<<< HEAD:\
+    ${file.reference.TimingFramework-0.55.jar}:\
+    ${file.reference.miglayout-4.0.jar}:\
+    ${file.reference.mssql-jdbc-11.2.0.jre17.jar}
     ${file.reference.mssql-jdbc-11.2.0.jre17.jar}
 =======
     ${file.reference.mssql-jdbc-11.2.0.jre17.jar}:\
@@ -382,7 +385,8 @@ javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
     ${file.reference.javax.mail-1.6.2.jar}:\
-    ${file.reference.src-appcode}
+    ${file.reference.src-appcode}:\
+    ${file.reference.mssql-jdbc-11.2.0.jre17.jar}
 javac.test.modulepath=\
     ${javac.modulepath}
 javac.test.processorpath=\
