--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -224,7 +224,8 @@ javac.classpath=\
     ${file.reference.barcode.jar}:\
     ${file.reference.TimingFramework-0.55.jar}:\
     ${file.reference.miglayout-4.0.jar}:\
-    ${file.reference.mssql-jdbc-11.2.0.jre17.jar-3}
+    ${file.reference.mssql-jdbc-11.2.0.jre17.jar-3}:\
+    ${file.reference.mssql-jdbc-11.2.0.jre17.jar-1}
     ${file.reference.TimingFramework-0.55.jar}:\
     ${file.reference.miglayout-4.0.jar}:\
     ${file.reference.mssql-jdbc-11.2.0.jre17.jar}
